[package]
name = "DLLInjector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "libloaderapi", "tlhelp32"] }
sysinfo = "0.20.4"
